// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mocha Package transformer should work with babel config 1`] = `
{
  "devDependencies": {
    "coveralls": "^3.1.1",
    "mocha": "^10.0.0",
    "nyc": "^15.1.0",
  },
  "greenkeeper": {
    "ignore": [
      "mocha",
      "coveralls",
      "nyc",
    ],
  },
  "metapak": {
    "configs": [
      "babel",
      "mocha",
    ],
    "data": {
      "testsFiles": "src/*.js src/**/*.js",
    },
  },
  "nyc": {
    "exclude": [
      "src/*.js src/**/*.js",
    ],
  },
  "scripts": {
    "cover": "nyc npm test && nyc report --reporter=html --reporter=text",
    "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls && rm -rf ./coverage",
    "mocha": "mocha --require '@babel/register' src/*.js src/**/*.js",
    "test": "npm run mocha",
  },
}
`;

exports[`mocha Package transformer should work with some files 1`] = `
{
  "devDependencies": {
    "coveralls": "^3.1.1",
    "mocha": "^10.0.0",
    "nyc": "^15.1.0",
  },
  "greenkeeper": {
    "ignore": [
      "mocha",
      "coveralls",
      "nyc",
    ],
  },
  "metapak": {
    "configs": [
      "mocha",
    ],
    "data": {
      "testsFiles": "src/*.js src/**/*.js",
    },
  },
  "nyc": {
    "exclude": [
      "src/*.js src/**/*.js",
    ],
  },
  "scripts": {
    "cover": "nyc npm test && nyc report --reporter=html --reporter=text",
    "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls && rm -rf ./coverage",
    "mocha": "mocha src/*.js src/**/*.js",
    "test": "npm run mocha",
  },
}
`;
